# 5dchess-tools

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  prepare-tests.sh
.github/workflows/: rust.yml
benches/: boards.rs  mate.rs  movement.rs  tree.rs
chessin5d/: Cargo.toml  config.ron.sample
chessin5d/src/: main.rs  request.rs
examples/mate_coverage/: main.rs
examples/monte_carlo/: bench.5dpgn  bench.json  bench.rs  hash.js  main.rs  package-lock.json  package.json  run.sh
examples/self_play/: main.rs
lib/: game.rs  lib.rs  main.rs  mate.rs  moves.rs  moveset.rs  parse.rs  random.rs  resolve.rs  traversal.rs  tree.rs  utils.rs  vboard.rs
lib/boards/: mod.rs  phase.rs
lib/check/: mod.rs  move_elim.rs  threat.rs
lib/eval/: deepen.rs  king_safety.rs  mod.rs  pawn_progression.rs  timeline_advantage.rs  value.rs  wdl.rs
lib/goals/: branch.rs  misc.rs  mod.rs
lib/prelude/: bitboard.rs  board.rs  check.rs  coords.rs  game.rs  goal.rs  info.rs  legal.rs  mate.rs  mod.rs  movement.rs  partial_game.rs  partial_state.rs  piece.rs  strategy.rs  tile.rs  time.rs
lib/strategies/: legal.rs  misc.rs  mod.rs
lib/tree/: dfs.rs  mod.rs  schedule.rs
profiling/: main.rs  prepare.sh
src/: main.rs
tests/: bitboard.rs  check.rs  game.rs  mate.rs  movements.rs  moveset.rs  n_cuboids.rs  parse.rs  partial_game.rs  piece.rs  prepare.rs  prepare.sh  standard-d4d5.json  strategy.rs  tile.rs  time.rs  tree.rs
tests/games/: brawns-empty.5dpgn  brawns-empty.json  brawns-en-passant.5dpgn  brawns-en-passant.json  brawns-pre-en-passant.5dpgn  brawns-pre-en-passant.json  dead-timeline-2.5dpgn  dead-timeline-2.json  dead-timeline.5dpgn  dead-timeline.json  defended-pawn-checkmate.alexbay  defended-pawn-checkmate.json  issue-1.5dpgn  issue-1.json  princess-checkmate.alexbay  princess-checkmate.json  reflected-checkmate.alexbay  reflected-checkmate.json  standard-castle.alexbay  standard-castle.json  standard-check.5dpgn  standard-check.json  standard-checkmate-2.alexbay  standard-checkmate-2.json  standard-checkmate-3.alexbay  standard-checkmate-3.json  standard-checkmate-4.5dpgn  standard-checkmate-4.json  standard-checkmate.alexbay  standard-checkmate.json  standard-complex-2.alexbay  standard-complex-2.json  standard-complex.json  standard-d4.5dpgn  standard-d4.json  standard-d4d5.5dpgn  standard-empty.5dpgn  standard-empty.json  standard-nonmate-2.5dpgn  standard-nonmate-2.json  (+8 more)
tests/games/bitboard/: bishop-timecheck.5dpgn  bishop-timecheck.json  knight-check.5dpgn  knight-check.json  pawn-check.5dpgn  pawn-check.json  (+12 more)
(+34 files in other folders)
