[package]
name = "chess5dtools"
version = "0.1.4"
authors = ["Adrien Burgun <adrien.burgun@orange.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chess5dlib"
path = "lib/lib.rs"
doctest = false

[dependencies]
json = "0.12.4"
lazy_static = "1.4.0"
permute = "0.1.0"
scoped_threadpool = "0.1.9"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0"
colored = "2"
itertools = "0.10.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.2"
coz = "0.1"

[[bench]]
name = "movement"
harness = false

[[example]]
name = "profiling"
path = "profiling/main.rs"

[profile.release]
debug = 1
