[package]
name = "chess5dtools"
version = "0.1.4"
authors = ["Adrien Burgun <adrien.burgun@orange.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["castling"]
castling = []
bitboard128 = []
countnodes = []
iddfs_log = []

[lib]
name = "chess5dlib"
path = "lib/lib.rs"
doctest = false

[dependencies]
lazy_static = "1.4.0"
scoped_threadpool = "0.1.9"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0"
colored = "2"
itertools = "0.10.0"
rand = "0.8.2"

[dev-dependencies]
criterion = "0.3"
coz = "0.1"
num_cpus = "1.0"
chrono = "0.4"

[[bench]]
name = "movement"
harness = false

[[bench]]
name = "mate"
harness = false

[[bench]]
name = "tree"
harness = false

[[example]]
name = "profiling"
path = "profiling/main.rs"

[profile.release]
debug = 1
opt-level = 3
